Apple right mouse emulation sending incorrect release event. #44739

Closed
opened 2015-05-17 12:07:55 +02:00 by Francesc Juhe · 10 comments

System Information
Any Mac OS X

Blender Version
Broken: All
Worked: None

Short description of error

The file source/blender/windowmanager/intern/wm_event_system.c has this code on line 2913

ifdef APPLE


/* rightmouse emulation */
if (U.flag & USER_TWOBUTTONMOUSE) {
  if (event->type == LEFTMOUSE) {
    
    if (event->val == KM_PRESS && event->oskey) {
      event->type = RIGHTMOUSE;
      event->oskey = 0;
      mmb_emulated = 1;
    }
    else if (event->val == KM_RELEASE) {
      if (mmb_emulated) {
        event->oskey = RIGHTMOUSE;
        event->alt = 0;
      }
      mmb_emulated = 0;
    }
  }
  
}

endif

The KM_RELEASE event is clearing alt and returning oskey as RIGHTMOUSE. Shouldn't it clear oskey and return type as RIGHTMOUSE?

    else if (event->val == KM_RELEASE) {
      if (mmb_emulated) {
        event->type = RIGHTMOUSE;
        event->oskey = 0;
      }
      mmb_emulated = 0;

Exact steps for others to reproduce the error

Doesn't produce errors but the event looks wrong.

**System Information** Any Mac OS X **Blender Version** Broken: All Worked: None **Short description of error** The file source/blender/windowmanager/intern/wm_event_system.c has this code on line 2913 # ifdef __APPLE__ ``` /* rightmouse emulation */ if (U.flag & USER_TWOBUTTONMOUSE) { if (event->type == LEFTMOUSE) { if (event->val == KM_PRESS && event->oskey) { event->type = RIGHTMOUSE; event->oskey = 0; mmb_emulated = 1; } else if (event->val == KM_RELEASE) { if (mmb_emulated) { event->oskey = RIGHTMOUSE; event->alt = 0; } mmb_emulated = 0; } } } ``` # endif The KM_RELEASE event is clearing alt and returning oskey as RIGHTMOUSE. Shouldn't it clear oskey and return type as RIGHTMOUSE? ``` else if (event->val == KM_RELEASE) { if (mmb_emulated) { event->type = RIGHTMOUSE; event->oskey = 0; } mmb_emulated = 0; ``` **Exact steps for others to reproduce the error** Doesn't produce errors but the event looks wrong.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @fjuhec

Added subscriber: @fjuhec
jens verwiebe was assigned by Bastien Montagne 2015-05-17 12:21:04 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Please avoid reporting 'suspicious' code as bug… better to do so in our ML (bf-committers) or directly on IRC (#blendercoders on freenode.net).

Jens, can you please check whether this code is correct?

Please avoid reporting 'suspicious' code as bug… better to do so in our ML (bf-committers) or directly on IRC (#blendercoders on freenode.net). Jens, can you please check whether this code is correct?

Added subscriber: @brecht

Added subscriber: @brecht

The code is wrong, but the proposed fix is not enough. It will never actually hit that code path, because of the middle mouse emulation code right above it, so I'll commit a slightly different fix.

Thanks for finding this!

The code is wrong, but the proposed fix is not enough. It will never actually hit that code path, because of the middle mouse emulation code right above it, so I'll commit a slightly different fix. Thanks for finding this!
Author

Yes, both emulations conflict as they use the same status variable 'mmb_emulated' and the first changes the event type preventing the second from doing anythong because the event is no longer a left button. But, that would only be an issue if both alt and oskey are pressed and in that case, what key is the user trying to emulate when alt is for middle button and oskey for right button? The code seems to just give priority to middle mouse emulation over right mouse emulation and it seems to matter only for single button mouse or tabled and mac.

I didn't want to go deeper than noticing the km_release for oskey emulated right button was not sending the right value.
I am curious on the final fix.

Yes, both emulations conflict as they use the same status variable 'mmb_emulated' and the first changes the event type preventing the second from doing anythong because the event is no longer a left button. But, that would only be an issue if both alt and oskey are pressed and in that case, what key is the user trying to emulate when alt is for middle button and oskey for right button? The code seems to just give priority to middle mouse emulation over right mouse emulation and it seems to matter only for single button mouse or tabled and mac. I didn't want to go deeper than noticing the km_release for oskey emulated right button was not sending the right value. I am curious on the final fix.

This issue was referenced by 43ee3f4040

This issue was referenced by 43ee3f4040a41c637b6eceda4c3aa1046f8a13a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 43ee3f4040.

Closed by commit 43ee3f4040.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44739
No description provided.