Fix T44739: OS X RMB emulation giving wrong mouse button release event.